# aws-cost-rs

./: Cargo.toml  Dockerfile
.deploy/: aws-cost-rs.yaml
.deploy/aws-cost-rs/: deployment.yaml
src/: main.rs
