[package]
name = "aws-cost-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
tokio = { version = "1", features = ["full"] }

aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-costexplorer = "1.9.0"

metrics = { version = "^0.21" }
metrics-util = { version = "^0.15", default-features = false, features = ["recency", "registry", "summary"] }
metrics-exporter-prometheus = "0.12.1"
